# nextflow-os

./: .dockerignore  README.md  docker-compose.yml  index.html  seed.ps1
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  jest.config.js  package-lock.json  package.json
backend/database/: run_migrations.py  run_migrations.ts  seed_crm.sql
backend/database/migrations/: 001_init_schema.sql  002_analytics_schema.sql  003_cdc_triggers.sql  003b_fix_cdc_triggers.sql  004_sme_policies_templates.sql  005_rbac_schema.sql  006_billing_schema.sql  007_invoice_blockchain.sql  008_webhooks_schema.sql  009_observability_schema.sql  010_marketplace_schema.sql  011_intelligence_schema.sql  012_dynamic_entities_schema.sql  013_blockchain_ledger_schema.sql  013b_workflow_definitions_schema.sql  014_cdc_dynamic_entities.sql  015_customer_crm_schema.sql  015_vietqr_billing.sql  016_omnichannel_chat.sql  017_field_checkins.sql  018_gamification_schema.sql  019_template_installations.sql  020_crm_loyalty_fields.sql  021_vertical_packs_queue_categories.sql  022_spa_and_auto_repair_packs.sql  023_fnb_and_edu_packs.sql  024_hosp_and_re_packs.sql  025_remaining_five_packs.sql  026_four_layer_upgrade_schemas.sql  027_feature_flags.sql  028_built_in_workflows.sql
backend/database/seeders/: 002_template_packs.sql
backend/src/: app.ts  lib.rs  main.rs
backend/src/config/: db.rs  db.ts
backend/src/controllers/: ai_proxy.rs  analytics.rs  analytics_v2.rs  auto_pack.rs  billing.rs  blockchain.rs  blockchain_explorer.rs  chat.rs  checkin.rs  (+46 more)
backend/tests/: integration_tests.rs  integration_tests_phase3.rs  integration_tests_phase3_sprint5.rs  integration_tests_phase4.rs  integration_tests_phase4_ai.rs  integration_tests_phase5.rs  integration_tests_phase6.rs  setup.ts
(+458 files in other folders)
