[package]
name = "nextflow-core-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
bcrypt = "0.15"
dotenvy = "0.15"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
hmac = "0.12"
rand = "0.8"
lazy_static = "1.4"
prometheus = { version = "0.13", features = ["process"] }
regex = "1.12.4"


[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.24"
